remove text wrap to fix ui on small dpis

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -458,7 +458,6 @@ overflow: hidden;
     .text-left-title {
         padding:20px;
         font-size: 18px;
-        white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
     }
